<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Surveys</string>

    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Log in</string>

    <string name="error_button_confirm">Got it!</string>

    <string name="home_today">Today</string>

    <string name="start_survey">Start Survey</string>
    <string name="submit_button">Submit</string>
    <string name="nps_not_at_all_likely">Not at all Likely</string>
    <string name="nps_extremely_likely">Extremely Likely</string>
    <string name="exit_warning_title">Warning!</string>
    <string name="exit_detail_message">Are you sure you want to quit the survey?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="thanks_message">Thanks for taking the survey.</string>
</resources>
